--- a/composer.json
+++ b/composer.json
@@ -69,6 +69,9 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
+        ],
+        "post-create-project-cmd": [
+            "./bin/initialize.sh"
         ]
     },
     "conflict": {
