--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "desaroger/symodo",
+    "description": "Symfony 4 + Mongo + Docker starter project",
     "type": "project",
     "license": "MIT",
     "require": {
@@ -9,34 +10,34 @@
         "doctrine/mongodb-odm-bundle": "^3.4",
         "friendsofsymfony/user-bundle": "^2.1",
         "sensio/framework-extra-bundle": "^5.1",
-        "symfony/asset": "^4.0",
-        "symfony/console": "^4.0",
-        "symfony/expression-language": "^4.0",
+        "symfony/asset": "^4.1",
+        "symfony/console": "^4.1",
+        "symfony/expression-language": "^4.1",
         "symfony/flex": "^1.0",
-        "symfony/form": "^4.0",
-        "symfony/framework-bundle": "^4.0",
+        "symfony/form": "^4.1",
+        "symfony/framework-bundle": "^4.1",
         "symfony/lts": "^4@dev",
         "symfony/monolog-bundle": "^3.1",
-        "symfony/orm-pack": "*",
-        "symfony/process": "^4.0",
-        "symfony/security-bundle": "^4.0",
-        "symfony/serializer-pack": "*",
+        "symfony/orm-pack": "^1.0",
+        "symfony/process": "^4.1",
+        "symfony/security-bundle": "^4.1",
+        "symfony/serializer-pack": "^1.0",
         "symfony/swiftmailer-bundle": "^3.1",
-        "symfony/twig-bundle": "^4.0",
-        "symfony/validator": "^4.0",
-        "symfony/web-link": "^4.0",
-        "symfony/webpack-encore-pack": "*",
-        "symfony/yaml": "^4.0"
+        "symfony/twig-bundle": "^4.1",
+        "symfony/validator": "^4.1",
+        "symfony/web-link": "^4.1",
+        "symfony/webpack-encore-pack": "^1.0",
+        "symfony/yaml": "^4.1"
     },
     "require-dev": {
-        "symfony/browser-kit": "^4.0",
-        "symfony/css-selector": "^4.0",
+        "symfony/browser-kit": "^4.1",
+        "symfony/css-selector": "^4.1",
         "symfony/debug-pack": "*",
-        "symfony/dotenv": "^4.0",
+        "symfony/dotenv": "^4.1",
         "symfony/maker-bundle": "^1.0",
-        "symfony/phpunit-bridge": "^4.0",
+        "symfony/phpunit-bridge": "^4.1",
         "symfony/profiler-pack": "*",
-        "symfony/web-server-bundle": "^4.0"
+        "symfony/web-server-bundle": "^4.1"
     },
     "config": {
         "preferred-install": {
